crates/aranya-policy-compiler/tests/data/structs/undefined_type_in_fact_multi_not_defined.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: a thing being referenced is not in scope
  |
2 | fact Foo[]=>{ s struct Unknown, b struct Bar, fi struct Fi }
  |                        ^^^^^^^ struct `Unknown` not defined
